# docker-fastapi-graphql-grpc-kafka-rabbitmq-example

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  run
config/: settings.py
db/: env.py
env/: pyvenv.cfg
hello/: app.py  db.py  extensions.py  grpc_server.py  initializers.py  models.py
hello/central/: schema.py  user_service.proto  user_service_pb2.py  user_service_pb2_grpc.py
hello/central/env/: pyvenv.cfg
hello/up/: models.py  mutations.py  queries.py  resolvers.py  subscriptions.py  types.py
hello/utils/: views.py
test/: conftest.py
test/hello/up/: test_views.py
